don't always reset the number of predictions shown in the predictions graph

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
       <dl class="pred-info span4">
         <dt>Name</dt><dd id='chemname'> </dd>
         <dt>Predicted Value</dt><dd id='pred'> </dd>
-        <dt>Smile</dt><dd id='smile'> </dd>
+        <dt>SMILES</dt><dd id='smile'> </dd>
         <dt>True Value</dt><dd id='target'> </dd>
       </dl>
     </div>
