--- a/static/css/odorapp.css
+++ b/static/css/odorapp.css
@@ -68,6 +68,11 @@ text {
     font-size: 11px;
 }
 
+text.legend {
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
 .controls {
     margin: 20px;
 }
