--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
 
   <body>
     <h1>Predictions for receptor and method</h1>
-    <p>Please cite: Gabler, Soelter, Hussain, Sachse and Schmuker (2013): Physicochemical properties vs. vibrational descriptors for virtual screening of odorants. <i>Molecular Informatics, in press</i>.</p>
+    <p>Please cite: <b><i>Gabler, Soelter, Hussain, Sachse and Schmuker</i> (2013)</b>: Physicochemical properties vs. vibrational descriptors for virtual screening of odorants.<br/> <i>Molecular Informatics, in press</i>.</p>
     {% include 'helpmodal.html' %}
     <a href="#helpmodal" class="btn" data-toggle="modal" id='help'>
       <i class='icon-question-sign'></i> Help
