--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,9 +32,8 @@
 
   <body>
     <h1>Predictions for receptor and method</h1>
-    <p>This web app visualizes the results presented in the research paper<br><br>
+    <p>For details please refer to the original publication (please cite when referring to the results):<br>
 Gabler S, Soelter J, Hussain T, Sachse S, Schmuker M (2013): Physicochemical properties vs. vibrational descriptors for virtual screening of odorants.<br/> <i>Molecular Informatics, in press</i>.</p>
-<p>Please cite the paper when referring to the results.</p>
     {% include 'helpmodal.html' %}
     <a href="#helpmodal" class="btn" data-toggle="modal" id='help'>
       <i class='icon-question-sign'></i> Help
