changed wording of citation stuff once more (again)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,22 +18,12 @@
       ga('send', 'pageview');
 
     </script>
-    <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-41043018-1']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
   </head>
 
   <body>
     <h1>Predictions for receptor and method</h1>
-    <p>For details please refer to the original publication (please cite when referring to the results):<br>
-Gabler S, Soelter J, Hussain T, Sachse S, Schmuker M (2013): Physicochemical properties vs. vibrational descriptors for virtual screening of odorants.<br/> <i>Molecular Informatics, in press</i>.</p>
+    <p>For details please see the original publication (please cite when referring to the results):</p>
+<p>Gabler S, Soelter J, Hussain T, Sachse S, Schmuker M (2013): Physicochemical properties vs. vibrational descriptors for virtual screening of odorants.<br/> <i>Molecular Informatics, in press</i>.</p>
     {% include 'helpmodal.html' %}
     <a href="#helpmodal" class="btn" data-toggle="modal" id='help'>
       <i class='icon-question-sign'></i> Help
